fix(table): table and ag-grid visual alignments (#1140)

--- a/projects/ng-aquila/documentation/examples/table/table-column-reorder/table-column-reorder-example.css
+++ b/projects/ng-aquila/documentation/examples/table/table-column-reorder/table-column-reorder-example.css
@@ -1,12 +1,13 @@
+.nx-table--reorder {
+    cursor: move;
+}
+
 .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
     background-color: var(--ui-01);
     box-shadow: 0 0 24px 0 rgba(65, 65, 65, 0.35);
-}
-
-.cdk-drag-placeholder {
-    opacity: 0;
+    border: 0;
 }
 
 .cdk-drag-animating {
@@ -17,7 +18,7 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 .col {
-    cursor: grab;
+    cursor: default;
 }
 .scroll-container {
     overflow-x: auto;
